--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.2.10",
+    "@tanstack/react-query": "^5.28.4",
     "@types/swiper": "^6.0.0",
+    "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "swiper": "^11.0.7",
     "typed.js": "^2.1.0"
   },
