--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -18,7 +23,8 @@
     "@nextui-org/react": "^2.2.10",
     "@tanstack/react-query": "^5.28.4",
     "@types/swiper": "^6.0.0",
-    "framer-motion": "^11.0.14",
+    "antd": "^5.15.3",
+    "framer-motion": "^11.0.15",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
