--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.6",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.15",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "swiper": "^11.0.7",
     "typed.js": "^2.1.0"
   },
