--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-query-devtools": "^5.28.6",
     "@types/swiper": "^6.0.0",
+    "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.15",
+    "jsvectormap": "^1.5.3",
     "next": "14.1.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
