--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-query-devtools": "^5.28.6",
     "@types/swiper": "^6.0.0",
+    "antd": "^5.15.4",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.15",
